tests/snapshots/trace_solver__spanshot_request@2801414806438133056.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  bundle_name: permissive
  request: "&[[&x]]: &[&mut [T]]"
---
&[[&x]] @ p: &[&mut [T]]
// Applying rule `Deref(EatOuter)`
[[&x]] @ *p: [&mut [T]]
// Applying rule `Constructor`
[&x] @ (*p).0: &mut [T]
// Applying rule `ConstructorRef`
&x @ &mut (*(*p).0).0: &mut T
// Applying rule `DerefMutWithShared(EatOuter)`
&x @ (&mut (*(*p).0).0 as &_): &T
// Applying rule `ExprSimplification`
&x @ &(*(*p).0).0: &T
// Applying rule `Deref(EatOuter)`
x @ *&(*(*p).0).0: T

// Final bindings (simplified):
let x: T = (*(*p).0).0
